# Wireless-mouse

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PROTOCOL.md  SETUP.md  TROUBLESHOOTING.md
protocol/: __init__.py  constants.py  serialization.py
server/: __init__.py  config.py  device_manager.py  input_controller.py  requirements-dev.txt  requirements.txt  server.py
tests/: __init__.py  test_device_manager.py  test_protocol.py
