[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "touchpad-mouse"
version = "1.0.0"
description = "Wireless mouse control via Bluetooth - turn your mobile device into a touchpad"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Touchpad Contributors", email = "dev@example.com"}
]
keywords = [
    "bluetooth",
    "mouse",
    "wireless",
    "touchpad",
    "remote-control",
    "input-control"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS :: MacOS 10.15",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Utilities",
]

dependencies = [
    "pybluez>=0.23; sys_platform != 'win32'",
    "pynput>=1.7.6",
    "pywinusb>=0.4.5; sys_platform == 'win32'",
    "python-dotenv>=0.19.0",
    "colorlog>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.18.3",
    "black>=22.3.0",
    "flake8>=4.0.1",
    "mypy>=0.950",
    "isort>=5.10.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/touchpad"
Documentation = "https://github.com/yourusername/touchpad/tree/main/docs"
Repository = "https://github.com/yourusername/touchpad.git"
"Issue Tracker" = "https://github.com/yourusername/touchpad/issues"

[project.scripts]
touchpad-server = "server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "protocol*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "bluetooth.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "Quartz.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["server", "protocol"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if sys.platform",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"
